--- a/style.css
+++ b/style.css
@@ -49,10 +49,24 @@ ol, ul {margin: 1rem 0 1rem 2rem;}
 
 code { font-family: monospace; }
 
+q {
+  font-style: italic;
+  quotes: "„" "“" "‚" "‘";
+}
+
+blockquote {
+  font-style: italic;
+  quotes: '';
+  margin: 2rem;
+}
+
+blockquote::before { content: "„"; }
+blockquote::after { content: "“"; }
+
 hr { 
   border: none;
   border-top: 1px solid var(--color-dark);
-  margin: 1rem 0;
+  margin: 2rem 0;
 }
 
 img { max-width: 100%; }
