--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@
 :root {
   --color-dark: black;
   --color-light: white;
-  --font-family: Arial, Helvetica, sans-serif;
-  font-family: var(--font-family);
+  --default-font-family: Arial, serif;
+  --mono-font-family: "Courier New", monospace;
+  font-family: var(--default-font-family);
   font-size: 16;
   line-height: 1.5;
   color: var(--color-dark);
@@ -47,7 +48,7 @@ a {
 
 ol, ul {margin: 1rem 0 1rem 2rem;}
 
-code { font-family: monospace; }
+code { font-family: var(--mono-font-family); }
 
 q {
   font-style: italic;
@@ -56,7 +57,6 @@ q {
 
 blockquote {
   font-style: italic;
-  quotes: '';
   margin: 2rem;
 }
 
