--- a/style.css
+++ b/style.css
@@ -69,7 +69,17 @@ hr {
   margin: 2rem 0;
 }
 
+/* Images and icons */
+
 img { max-width: 100%; }
+
+svg.icon {
+  stroke: var(--color-dark);
+  stroke-width: 5;
+  stroke-linecap: square;
+  stroke-linejoin: square;
+  fill: none;
+}
 
 /* Forms */
 
